[gd_scene load_steps=24 format=2]

[ext_resource path="res://Assets/wheelssanta.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Bike.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Head.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Wheel1.gd" type="Script" id=4]
[ext_resource path="res://Other/wheel_info.tres" type="PhysicsMaterial" id=5]
[ext_resource path="res://Assets/bikesanta.png" type="Texture" id=6]
[ext_resource path="res://Scripts/RestartButton.gd" type="Script" id=7]
[ext_resource path="res://Scripts/MenuButton.gd" type="Script" id=8]
[ext_resource path="res://Assets/menubutton.png" type="Texture" id=9]
[ext_resource path="res://Assets/menubuttonpressed.png" type="Texture" id=10]
[ext_resource path="res://Scripts/WindowDialog.gd" type="Script" id=11]
[ext_resource path="res://Scripts/PauseBackground.gd" type="Script" id=12]
[ext_resource path="res://Scripts/BikeStats.gd" type="Script" id=13]
[ext_resource path="res://Other/Font.tres" type="DynamicFont" id=14]
[ext_resource path="res://Scripts/Time.gd" type="Script" id=15]

[sub_resource type="CircleShape2D" id=1]
radius = 39.4927

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Fonts/8-bit-pusab.ttf"

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Fonts/8-bit-pusab.ttf"

[sub_resource type="DynamicFont" id=8]
size = 25
font_data = SubResource( 7 )

[node name="Bike" type="Node2D"]
position = Vector2( -130.307, -367.33 )
script = ExtResource( 13 )

[node name="WheelBack" type="RigidBody2D" parent="."]
position = Vector2( 459.884, 193.958 )
collision_layer = 2
mass = 0.2
physics_material_override = ExtResource( 5 )
can_sleep = false
linear_damp = 1.0
angular_damp = 20.0
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="WheelBack"]
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WheelBack"]
scale = Vector2( 0.9, 0.9 )
shape = SubResource( 1 )

[node name="WheelFront" type="RigidBody2D" parent="."]
position = Vector2( 593.884, 193.958 )
collision_layer = 2
mass = 0.2
physics_material_override = ExtResource( 5 )
can_sleep = false
linear_damp = 1.0
angular_damp = 20.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="WheelFront"]
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WheelFront"]
scale = Vector2( 0.9, 0.9 )
shape = SubResource( 1 )

[node name="Frame" type="RigidBody2D" parent="."]
position = Vector2( 506.236, 145.695 )
collision_layer = 2
mass = 0.4
can_sleep = false
linear_damp = 0.01
angular_damp = 0.0
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Frame"]
position = Vector2( 19.663, -50 )
scale = Vector2( 10, 10 )
frames = SubResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Frame"]
position = Vector2( -0.0579376, -0.06073 )
polygon = PoolVector2Array( -21.3571, -70.5302, -39.7345, -48.4774, -49.2906, -30.8352, -53.7012, -11.7228, -51.2909, -2.46371, -46.9091, 7.1412, -38.1066, 7.1412, -24.9028, 12.4227, -7.29779, 26.9469, -3.33664, 63.4774, 37.5243, 63.8862, 43.8759, 38.9453, 48.5982, 27.387, 55.2001, 19.0246, 64.8829, 13.3029, 83.4767, 10.222, 94.4798, 3.18002, 95.3601, -13.5448, 92.7193, -30.7097, 68.9525, -33.7906, 55.7487, -47.4345, 42.3966, -55.9512, -2.89822, -74.0692 )

[node name="Camera2D" type="Camera2D" parent="Frame"]
position = Vector2( -0.0579376, -0.06073 )
current = true

[node name="SpringBack" type="DampedSpringJoint2D" parent="Frame"]
rotation = 0.785398
node_a = NodePath("..")
node_b = NodePath("../../AxleBack")
length = 80.0
rest_length = 100.0
stiffness = 64.0
damping = 7.5

[node name="GrooveBackTop" type="GrooveJoint2D" parent="Frame"]
rotation = 0.785398
node_a = NodePath("..")
node_b = NodePath("../../AxleBack")
length = 65.0

[node name="GrooveBackBottom" type="GrooveJoint2D" parent="Frame"]
position = Vector2( -46.352, 48.263 )
rotation = 0.785398
node_a = NodePath("../../AxleBack")
node_b = NodePath("..")

[node name="SpringFront" type="DampedSpringJoint2D" parent="Frame"]
rotation = -0.785398
node_a = NodePath("..")
node_b = NodePath("../../AxleFront")
length = 80.0
rest_length = 100.0
stiffness = 64.0
damping = 7.5

[node name="GrooveFrontTop" type="GrooveJoint2D" parent="Frame"]
rotation = -0.785398
node_a = NodePath("..")
node_b = NodePath("../../AxleFront")

[node name="GrooveFrontBottom" type="GrooveJoint2D" parent="Frame"]
position = Vector2( 83.648, 48.263 )
rotation = -0.785398
node_a = NodePath("../../AxleFront")
node_b = NodePath("..")

[node name="Head" type="RigidBody2D" parent="."]
position = Vector2( 527.268, 55.5222 )
collision_layer = 2
mass = 0.2
contacts_reported = 1
contact_monitor = true
can_sleep = false
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Head"]
position = Vector2( -21.4849, 89.9825 )
polygon = PoolVector2Array( -6.32483, -63.5508, -7.6452, -106.243, -15.1273, -163.9, 3.79807, -163.459, 13.0407, -141.453, 38.5681, -120.327, 45.6101, -106.243, 44.2897, -72.7934, 57.0533, -64.8712, 55.7329, -30.5413, 39.0081, -31.4216 )

[node name="AxleBack" type="RigidBody2D" parent="."]
position = Vector2( 459.884, 193.958 )
collision_layer = 2
can_sleep = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AxleBack"]
shape = SubResource( 3 )

[node name="WheelJointBack" type="PinJoint2D" parent="AxleBack"]
node_a = NodePath("../../WheelBack")
node_b = NodePath("..")

[node name="AxleFront" type="RigidBody2D" parent="."]
position = Vector2( 589.884, 193.958 )
collision_layer = 2
can_sleep = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AxleFront"]
shape = SubResource( 4 )

[node name="WheelJointFront" type="PinJoint2D" parent="AxleFront"]
node_a = NodePath("../../WheelFront")
node_b = NodePath("..")

[node name="HeadJoint2" type="PinJoint2D" parent="."]
position = Vector2( 552.477, 97.4036 )
node_a = NodePath("../Head")
node_b = NodePath("../Frame")
disable_collision = false

[node name="HeadJoint3" type="PinJoint2D" parent="."]
position = Vector2( 505.231, 76.3109 )
node_a = NodePath("../Frame")
node_b = NodePath("../Head")
disable_collision = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RestartButton" type="Button" parent="CanvasLayer"]
margin_left = 50.0
margin_top = 507.0
margin_right = 198.0
margin_bottom = 550.0
hint_tooltip = "Press start the game"
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 6 )
action_mode = 0
text = "Restart"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowDialog" type="WindowDialog" parent="CanvasLayer"]
pause_mode = 2
margin_right = 400.0
margin_bottom = 400.0
window_title = "Pause Menu"
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit To Start" type="Button" parent="CanvasLayer/WindowDialog"]
margin_left = 25.0
margin_top = 275.0
margin_right = 375.0
margin_bottom = 375.0
custom_fonts/font = SubResource( 8 )
text = "Quit to Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart Level" type="Button" parent="CanvasLayer/WindowDialog"]
margin_left = 25.0
margin_top = 150.0
margin_right = 375.0
margin_bottom = 250.0
custom_fonts/font = SubResource( 8 )
text = "Restart Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Return To Game" type="Button" parent="CanvasLayer/WindowDialog"]
margin_left = 25.0
margin_top = 25.0
margin_right = 375.0
margin_bottom = 125.0
custom_fonts/font = SubResource( 8 )
text = "Return to Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="TextureButton" parent="CanvasLayer"]
rect_scale = Vector2( 10, 10 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.392157 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 768.0
margin_top = 30.0
margin_right = 926.0
margin_bottom = 95.0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0.686275, 0.686275, 0.686275, 1 )
text = "00:00.00"
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Head" to="Head" method="_on_Head_body_entered"]
[connection signal="pressed" from="CanvasLayer/RestartButton" to="CanvasLayer/RestartButton" method="_on_RestartButton_pressed"]
[connection signal="popup_hide" from="CanvasLayer/WindowDialog" to="CanvasLayer/MenuButton" method="_on_WindowDialog_popup_hide"]
[connection signal="pressed" from="CanvasLayer/WindowDialog/Quit To Start" to="CanvasLayer/MenuButton" method="_on_Quit_To_Start_pressed"]
[connection signal="pressed" from="CanvasLayer/WindowDialog/Restart Level" to="CanvasLayer/MenuButton" method="_on_Restart_Level_pressed"]
[connection signal="pressed" from="CanvasLayer/WindowDialog/Return To Game" to="CanvasLayer/MenuButton" method="_on_Return_To_Game_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuButton" to="CanvasLayer/MenuButton" method="_on_MenuButton_pressed"]
